--- a/pom.xml
+++ b/pom.xml
@@ -32,16 +32,19 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 	</dependency>  
- 	<dependency>
-    	<groupId>org.postgresql</groupId>
-    	<artifactId>postgresql</artifactId>
-    	<version>42.2.5</version>
-	</dependency> 
   	<dependency>
   		<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-java-core</artifactId>
   		<version>1.1.1-SNAPSHOT</version>
   	</dependency>	 			
+	<dependency>
+	  <groupId>de.schulzt.dnb</groupId>
+	  <artifactId>dnbdb</artifactId>
+	  <version>0.0.1-SNAPSHOT</version>
+	</dependency>	
 
   </dependencies>
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>  
 </project>
