--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.schulzt.tools</groupId>
   <artifactId>dnbmigration</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.0.5.RELEASE</version>
 				<executions>
 					<execution>
 						<goals>
